# import-bank-details

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  codecov.yml  config.yaml  config_bank.yaml  config_llm.yaml  main.ipynb  main.py  mypy.ini  pyproject.toml  pytest.ini  run_tests.sh
.devcontainer/: devcontainer.json  install.sh
.github/workflows/: ci.yml  pre-commit.yml
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  GETTING_STARTED.md
import_bank_details/: categories.yaml  classification.py  logger_setup.py  main.py  search.py  structured_output.py  utils.py
tests/: __init__.py  conftest.py  test_classification.py  test_e2e.py  test_integration.py  test_logger_setup.py  test_main.py  test_search.py  test_structured_output.py  test_utils.py
