[tool.poetry]
name = "import-bank-details"
version = "0.1.0"
description = "Python script to import, merge, and export different bank statements together."
authors = ["Giampaolo Casolla <giampaolocasolla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
PyYAML = "^6.0.2"
openpyxl = "^3.1.5"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^24.4.2"
flake8 = "^3.9.2"
isort = "^5.10.1"
mypy = "^1.2.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
